--- a/learning_logs/templates/base.html
+++ b/learning_logs/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Page title</title>
     {% load static %}
+    <link rel="icon" type="image/png" href="{% static 'head.ico' %}" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     {% load static %}
     <style>
